# Customer-Churn-Prediction

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
Data/: .gitignore
log/: .gitignore
mlruns/0/: meta.yaml
mlruns/0/7547cfaea9c9427592f0f41aefc91f3e/: meta.yaml
mlruns/0/7547cfaea9c9427592f0f41aefc91f3e/metrics/: test_accuracy  test_f1_score  test_precision  (+5 more)
mlruns/0/d7037fbe4e1a4516a30d057118faba3f/: meta.yaml
mlruns/201485803707473238/: meta.yaml
mlruns/201485803707473238/3cb6403921944596912c7235efc639c1/: meta.yaml
mlruns/201485803707473238/59cfa6779a0d4fe08903e4ecab32e30d/: meta.yaml
mlruns/201485803707473238/5b052883127e408488d4541fc4c4c98b/: meta.yaml
mlruns/201485803707473238/6aa20ec22ae043c389d10ed35a5dd051/: meta.yaml
mlruns/201485803707473238/78a196bae5f74217b33ddc6334953aaf/: meta.yaml
mlruns/201485803707473238/9b92bacbf2514bd9a2f54a38e829f900/: meta.yaml
notebooks/: 1-experiment_01_rf.ipynb  2-experiment_02_lgr.ipynb  3-experiment_03_add_requlization.ipynb  4-experiment_04_merging_data.ipynb  5-experiment_05_lgr_with_new_split.ipynb  6-experiment_06_rf_with_new_split.ipynb  EDA&Preprocessing.ipynb
src/: __init__.py  main.py
src/controllers/: ProcessController.py  __init__.py
src/data/: data_loading.py  data_preprocessing.py
src/helpers/: __init__.py  config.py
src/model/: model_building.py  model_evaluation.py
src/pipeline/: __init__.py  data_preprocessing.py  model_building.py  model_evaluation.py  register_model.py
src/routes/: base.py  data.py  model.py
src/routes/schemes/: data.py
(+84 files in other folders)
