[project]
name = "customer-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub==0.6.3",
    "ipykernel==6.30.1",
    "mlflow==3.3.1",
    "numpy==2.3.0",
    "pandas==2.3.0",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
]
