[project]
name = "customer-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-ml>=1.28.1",
    "azure-identity>=1.24.0",
    "dagshub==0.6.3",
    "dvc[s3]==3.62.0",
    "ipykernel==6.30.1",
    "mlflow[extras]==3.3.1",
    "numpy==2.3.0",
    "pandas==2.3.0",
    "pydantic==2.10.1",
    "pydantic-settings==2.10.1",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
]
